--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -1,9 +1,13 @@
-<% if !current_user.following?(@user)%><span><%= button_to "Follow", { action: "follow", id: current_user.id, user_id: @user.id } %></span><% end %>
+<% if (!current_user.following?(@user) && current_user.id != @user.id) %><span><%= button_to "Follow", { action: "follow", id: current_user.id, user_id: @user.id } %></span><% end %>
 <%= @user.name %>
 
-<%= @user.follows_by_type('HearingConference') %>
-<%= @user.following_users %>
-
+<% @hearingconferences.each do |hearingconference| %>
+	<%= link_to hearingconference.title, hearingconference %>
+	<%= link_to image_tag(hearing_conference.photo), hearingconference %>
+<% end %>
+<% @users.each do |user| %>
+	<%= link_to user.name, user_page(user.id) %>
+<% end %>
 
 
 <div class="row">
