--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -6,7 +6,7 @@
 	<%= link_to image_tag(hearing_conference.photo), hearingconference %>
 <% end %>
 <% @users.each do |user| %>
-	<%= link_to user.name, user_page(user.id) %>
+	<%= link_to user.name, user_page_path(user.id) %>
 <% end %>
 
 
