--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -6,7 +6,9 @@
   <div class="col-xs-10 col-sm-5 col-sm-offset-1 col-md-3 col-lg-3 pin_space">
 	<h2 class="text-center"><%= link_to hearingconference.title, hearingconference %></h2>
 	<%= link_to image_tag(hearingconference.photo, class: "img-responsive img-thumbnail"), hearingconference %>
+  </div>
 <% end %>
+</div>
 
 <div class="row">
     <% @posts.each do |post| %>
