--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -102,7 +102,7 @@ ul li a:hover{
               <div class="time"><%= post.created_at.strftime("%F") %></div>
               <div class="btn btn-info"><%= link_to post.hearing_conference.title, hearing_conference_path(post.hearing_conference_id) %></div>
 			  <h2 class="articletitle"><%= link_to post.title, post %></h2>
-              <div class="articlecontent"><%= raw(@post.content).truncate(50, :separator => " ").html_safe {link_to "繼續閱讀→", post} %></div>
+              <div class="articlecontent"><%= raw(post.content).truncate(50, :separator => " ").html_safe {link_to "繼續閱讀→", post} %></div>
           
           </div>
 		<% end %>
