--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -111,9 +111,16 @@ li{
 	width: 200px;
 }
 
+.pagename {
+	font-size: 2em;
+	font-weight: bold;
+}
+
 ul li a{
     text-decoration: none;
     color: grey;
+    font-size: 1.5em;
+	font-weight: bold;
 }
 
 ul li:hover{
