--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,4 +1,12 @@
 <%# add navigation links to this file %>
+<style>
+.navbar-text {
+  top:0px;
+}
+</style>     
+
+
+
       <li><%= link_to "公聽會搜尋", search_path %></li>
       <li><%= link_to "戰況分析", posts_path %></li>
       <li><%= link_to image_tag('logo.png'), root_path, class: 'navbar-brand' %></li>
