fix a:hover background-color

--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -123,6 +123,10 @@ ul li a{
 	font-weight: bold;
 }
 
+a:hover{
+	background-color: #808080;
+}
+
 ul li:hover{
     border-left: 3px solid #ff3333;
     background: grey;
