--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -102,13 +102,18 @@ li{
     line-height: 3em;
 }
 
+.username h3 {
+	font-size: 2em;
+	line-height: 110%;
+}
+
 .profilephoto img{
-	height: 200px;
-	width: 200px;
+	height: 100px;
+	width: 100px;
 }
 
 .leftbar {
-	width: 200px;
+	width: 100px;
 }
 
 .pagename {
@@ -116,11 +121,13 @@ li{
 	font-weight: bold;
 }
 
+.articletitle {
+	line-height: 120%;
+}
+
 ul li a{
     text-decoration: none;
     color: grey;
-    font-size: 1.5em;
-	font-weight: bold;
 }
 
 a:hover{
@@ -176,7 +183,7 @@ ul li a:hover{
               <div class="time"><%= post.created_at.strftime("%F") %></div>
               <div class="btn btn-info"><%= link_to post.hearing_conference.title, hearing_conference_path(post.hearing_conference_id) %></div>
 			  <h2 class="articletitle"><%= link_to post.title, post %></h2>
-              <div class="articlecontent"><%= raw(post.content).truncate(50, :separator => " ").html_safe {link_to "繼續閱讀→", post} %></div>
+              <div class="articlecontent"><%= raw(post.content).truncate(100, :separator => " ").html_safe {link_to "繼續閱讀→", post} %></div>
           
           </div>
 		<% end %>
