fix css:conflit problem

--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -95,7 +95,7 @@ ul{
     color: grey;
 }
 
-li{
+.btn .leftbar {
     border-bottom: 1px solid grey;
     height: 3em;
     text-align: center;
@@ -125,7 +125,7 @@ li{
 	line-height: 120%;
 }
 
-ul li a{
+.btn a{
     text-decoration: none;
     color: grey;
 }
@@ -134,12 +134,12 @@ a:hover{
 	background-color: #808080;
 }
 
-ul li:hover{
+.leftbar :hover{
     border-left: 3px solid #ff3333;
     background: grey;
 }
 
-ul li a:hover{
+.leftbar a:hover{
     color: black;
 }
 
