--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -86,10 +86,9 @@ body{
     background: #ff3333;
 }
 
-ul{
+ul {
     list-style: none;
     line-height: 2em;
-    padding: 0 0 1em 0;
     margin-bottom: 1em;
     color: grey;
 }
@@ -115,6 +114,11 @@ ul{
 	width: 100px;
 }
 
+.leftbar a:hover {
+	text-decoration: none;
+    color: grey;
+}
+
 .pagename {
 	font-size: 2em;
 	font-weight: bold;
@@ -123,11 +127,6 @@ ul{
 .articletitle {
 	line-height: 120%;
 }
-/*
-.btn a{
-    text-decoration: none;
-    color: grey;
-}*/
 
 .leftbar:hover{
     border-left: 3px solid #ff3333;
