fix css: problem

--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -15,7 +15,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     padding: 0;
     border: 0;
     outline: 0;
-    vertical-align: baseline;
     background: transparent;
 }
 body {
@@ -114,9 +113,14 @@ ul {
 	width: 100px;
 }
 
+.leftbar a {
+	font-size: 1.2ex;
+}
+
 .leftbar a:hover {
 	text-decoration: none;
-    color: grey;
+	background-color: #808080;
+    color: black;
 }
 
 .pagename {
@@ -126,6 +130,10 @@ ul {
 
 .articletitle {
 	line-height: 120%;
+}
+
+.articlecontent {
+	    text-decoration: none;
 }
 
 .leftbar:hover{
