fix css: problem

--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -94,9 +94,7 @@ ul {
 
 .btn, .leftbar {
     border-bottom: 1px solid grey;
-    height: 3em;
     text-align: center;
-    line-height: 3em;
 }
 
 .username h3 {
@@ -114,7 +112,7 @@ ul {
 }
 
 .leftbar a {
-	font-size: 1.2ex;
+	font-size: 1.2em;
 }
 
 .leftbar a:hover {
