fix css: problem

--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -99,7 +99,7 @@ ul {
 
 .username h3 {
 	font-size: 2em;
-	line-height: 110%;
+	line-height: 150%;
 }
 
 .profilephoto img{
@@ -113,6 +113,7 @@ ul {
 
 .leftbar a {
 	font-size: 1.2em;
+	line-height: 3ex;
 }
 
 .leftbar a:hover {
@@ -127,20 +128,21 @@ ul {
 }
 
 .articletitle {
-	line-height: 120%;
+	line-height: 200%;
 }
 
 .articlecontent {
-	    text-decoration: none;
+	text-decoration: none;
+}
+
+.articlecontent span {
+	text-decoration: none;
+	font-size: 20px;
 }
 
 .leftbar:hover{
     border-left: 3px solid #ff3333;
     background: grey;
-}
-
-.leftbar a:hover{
-    color: black;
 }
 
 .post_article{
