--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -113,7 +113,7 @@ ul {
 
 .leftbar a {
 	font-size: 1.2em;
-	line-height: 3ex;
+	line-height: 3em;
 }
 
 .leftbar a:hover {
@@ -133,6 +133,10 @@ ul {
 
 .articlecontent {
 	text-decoration: none;
+}
+
+.articlecontent a {
+	font-size: 20px;
 }
 
 .articlecontent span {
