fix css: problem

--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -135,8 +135,12 @@ ul {
 	text-decoration: none;
 }
 
-.articlecontent a {
+.post_article a {
 	font-size: 20px;
+}
+
+.btn {
+	background-color: #c12727;
 }
 
 .articlecontent span {
