modify conference show page

--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -138,6 +138,9 @@ ul {
 .post_article a {
 	font-size: 20px;
 }
+.post_article a:after {
+	color : rgb(254,254,254);
+}
 
 .btn {
 	background-color: #c12727;
