--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,15 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+ *= require framework_and_overrides
+ *= require hearing_conferences
+ *= require index
+ *= require posts
+ *= require report
+ *= require scaffolds
+ *= require search
+ *= require style
+ *= require style.mod
  *= require_self
  *= require bootstrap-tagsinput
  */
