--- a/app/views/main/report.html.erb
+++ b/app/views/main/report.html.erb
@@ -1,62 +1,49 @@
+<title>情資回報</title>
 
-    <!-- Start: MAIN CONTENT -->
-    <div class="content">
-      <div class="container">
-        <div class="page-header">
-          <h1>回報公聽會 Report new public hearing to us</h1>
-        </div>  
-         <section>
-                    <div class="ContactForm">
-                    <form action="https://docs.google.com/spreadsheet/formResponse?formkey=dDZ3dGNNLVFBTjR4bktTNGhQVEFfa3c6MA&amp;ifq" method="POST">
-                        <input type="hidden" name="entry.0.single" value="100703010">
-                        <h3>公聽會名稱</h3>
-                        <input type="text" name="entry.4.single">
+<link rel="shortcut icon" href="http://music-map.tw/favicon.ico">
+<link rel="icon" href="http://music-map.tw/favicon.ico">
 
-                        <h3>相關網址</h3>
-                        <input type="text" name="entry.4.single">
-                        <h3>選擇縣市</h3>
-                        <select name="entry.3.single">
-                                    <option value="Keelung">基隆市
-                                    <option value="Taipei">台北市
-                                    <option value="NewTaipei">新北市
-                                    <option value="Taoyuan">桃園縣
-                                    <option value="Hsinchu">新竹縣
-                                    <option value="Miaoli">苗栗縣
-                                    <option value="Taichung">台中市
-                                    <option value="Changhua">彰化縣
-                                    <option value="Nantou">南投縣
-                                    <option value="Yunlin">雲林縣
-                                    <option value="Chiayi">嘉義縣
-                                    <option value="Tainan">台南市
-                                    <option value="Kaohsiung">高雄市
-                                    <option value="Pingtung">屏東縣
-                                    <option value="Yilan">宜蘭縣
-                                    <option value="Hualien">花蓮縣
-                                    <option value="Taitung">台東縣
-                                    <option value="Penghu">澎湖縣
-                                    <option value="Kinmen">金門縣
-                                    <option value="Lienchiang">連江縣
-            
-                        </select>
+<section id="report_container" style="margin-top:100px">
 
-                        <h3>鄉鎮市區</h3>
-                            <input type="text" name="entry.4.single">
-                        <h3>詳細地址（ex：指南路二段64號）</h3>
-                            <input type="text" name="entry.4.single">
-                        
+<h2 id="report_h2"><img src="../assets/report.png" style=width:50%></h2>
 
-                        <h3>聯絡信箱</h3>
-                            <input type="text" name="entry.4.single">
-                        
-                        <h3>備註</h3>
-                        
-                        <textarea name="entry.5.single" cols="30" rows="5"></textarea>
+<br>
 
-                        <input type="submit" value="送出" name="submit">
+<div class="ss-form">
 
-                        </form>
-                    </div>
 
-            </section> 
-    
-</div></div>
+<form name="ss" id="ss-form" method="post" action="https://docs.google.com/forms/d/18LuXY085a9RRNByCBxjzD0wU-FRcgFcscdsvMi1Sj1k/formResponse" onsubmit="sent_ujubahdq=true">
+
+<div id="wrapping" class="clearfix">
+<section id="aligned">
+<input type="text" name="entry.3839391" id="entry_3839391" placeholder="公聽會名稱" autocomplete="off" tabindex="1"  value="" aria-required="true" class="txtinput" required="" title="">
+
+<input type="text" name="entry.693489587" id="entry_693489587" placeholder="相關網址" autocomplete="off" tabindex="2"  value="" aria-required="true" class="txtinput" required="" title="">
+
+
+<input type="text" name="entry.1310601335" id="entry_1310601335" placeholder="選擇縣市" autocomplete="off" tabindex="3"  value="" aria-required="true" class="txtinput" required="" title="">
+
+        
+<input type="text" name="entry.1950647982" id="entry_1950647982" placeholder="鄉鎮市區" autocomplete="off" tabindex="3"  value="" aria-required="true" class="txtinput" required="" title="">
+        
+<input type="text" name="entry.1882998686" id="entry_1882998686" placeholder="詳細地址（ex：指南路二段64號）" autocomplete="off" tabindex="3"  value="" aria-required="true" class="txtinput" required="" title="">
+
+<input type="email" name="entry.1460300259" id="entry_1460300259" placeholder="聯絡信箱" autocomplete="off" tabindex="3"  value="" aria-required="true" class="txtinput" required="" title="">
+
+
+<textarea name="entry.1165323417" id="entry_1165323417" placeholder="備註" tabindex="5" class="txtblock"></textarea>
+
+
+            </section>
+        </div>
+
+<section id="buttons">
+            <input type="reset" name="reset" id="resetbtn" class="resetbtn" value="重填">
+            <input type="submit" name="submit" id="ss-submit" class="ss-submit" tabindex="7" value="填完送出">
+            <br style="clear:both;">
+        </section>
+        
+        </form>
+<script type='text/javascript' src='https://docs.google.com/static/forms/client/js/2601941257-formviewer_prd.js'></script>
+</div>
+</section>
