--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -91,12 +91,10 @@ body{
     font-size: 1em;
     width: 100px;
     height: 40px;
-    background: #cf304b;
+    background: #8c8c8c;
     color: white;
     border: none;
     font-weight: bold;
-    border: 1px solid black;
-    box-shadow: 3px 3px 5px 2px black inset;
 }
 
 ul {
