--- a/app/views/hearing_conferences/_form.html.erb
+++ b/app/views/hearing_conferences/_form.html.erb
@@ -17,23 +17,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    公聽會名稱：<%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :happen_date %><br>
-    <%= f.date_select :happen_date %>
+    日期：<%= f.date_select :happen_date %>
   </div>
   <div class="field">
     <%= f.input :photo %>
   </div>
   <div class="field">
-    <%= f.label :count %><br>
-    <%= f.number_field :count %>
-  </div>
-  <div class="field">
-    <%= f.label :category_id %><br>
-    <%= f.number_field :category_id %>
+    <%= f.input :category_id, collection: Category.all, prompt: "請選擇一個種類", :class => "collect" %>
   </div>
   <div class="field">
     <%= f.label :location %><br>
@@ -46,6 +39,24 @@
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= f.input :event %>
+  </div>
+  <div class="field">
+    相關法：<%= f.text_field :law %>
+  </div>
+  <div class="field">
+    主席：<%= f.text_field :president %>
+  </div>
+  <div class="field">
+    主辦單位：<%= f.text_field :organizer %>
+  </div>
+  <div class="field">
+    <%= f.input :participant %>
+  </div>
+  <div class="field">
+    <%= f.input :topics %>
   </div>
   <%= f.input :tag_list, :input_html => { :id => 'tags_1', :data => { :role => 'tagsinput' }}, :label => "標籤" %>
   <div class="actions">
