--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
-
+<div style="margin-top:60px;"></div>
+<h1><%= @post.user.name %></h1>
 <%= raw(@post.content) %>
 
 <%= link_to 'Edit', edit_hearing_conference_post_path(@post.hearing_conference_id,@post.id) %> |
